implemented base template

--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -4,6 +4,7 @@
 {% block title %}
     Products
 {% endblock title %}
+{% block content %}
 <h1>Products</h1>
 <h2>
     <ul>
@@ -14,5 +15,4 @@
         {% endfor %}
     </ul>
 </h2>
-</body>
-</html>
+{% endblock content %}
