--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,21 @@
 <!-- taskapp/templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>{% block title %}{% endblock %}</title>
-    {% block styles %}{% endblock %}
-</head>
-
-<body>
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
-    {% block scripts %}{% endblock %}
-</body>
-
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>
+            {% block title %}
+            {% endblock title %}
+        </title>
+        {% block styles %}
+        {% endblock styles %}
+    </head>
+    <body>
+        <div id="content">
+            {% block content %}
+            {% endblock content %}
+        </div>
+        {% block scripts %}
+        {% endblock scripts %}
+    </body>
 </html>
