--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-{% extends.html %}
+{% extends "base.html" %}
 {% load static %}
 {% block title %}
     Products
 {% endblock title %}
 {% block content %}
-<h1>Products</h1>
-<h2>
-    <ul>
-        {% for product in object_list %}
-            <li>
-                <a href="{{ product.get_absolute_url }}">{{ product }}</a>
-            </li>
-        {% endfor %}
-    </ul>
-</h2>
+    <h1>Products</h1>
+    <h2>
+        <ul>
+            {% for product in object_list %}
+                <li>
+                    <a href="{{ product.get_absolute_url }}">{{ product }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </h2>
 {% endblock content %}
