--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>
-            {% block title %}
-            {% endblock title %}
-        </title>
-        {% block styles %}
-        {% endblock styles %}
-    </head>
-    <body>
-        <div id="content">
-            {% block content %}
-            {% endblock content %}
-        </div>
-        {% block scripts %}
-        {% endblock scripts %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock %}</title>
+</head>
+<body>
+    {% block content %}
+    {% endblock %}
+</body>
 </html>
