--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <h1>{{ article.title }}</h1>
-        <p><strong>Created On:</strong> {{ article.created_on }}</p>
-        <p><strong>Updated On:</strong> {{ article.updated_on }}</p>
+        <p>Created On: {{ article.created_on }}</p>
+        <p>Updated On: {{ article.updated_on }}</p>
         <p>{{ article.entry|linebreaks }}</p>
     </div>
 </body>
