--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -5,13 +5,12 @@
 {% endblock title %}
 {% block content %}
     <h1>Products</h1>
-    <h2>
-        <ul>
-            {% for product in object_list %}
-                <li>
-                    <a href="{{ product.get_absolute_url }}">{{ product }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </h2>
+    {% for type in object_list %}
+        <h2>{{ type }}</h2>
+        {% for product in type.products.all %}
+            <li>
+                <a href="{{ product.get_absolute_url }}">{{ product }}</a>
+            </li>
+        {% endfor %}
+    {% endfor %}
 {% endblock content %}
