--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,22 +1,11 @@
 {% extends 'base.html' %}
-
+{% block title %}
+{%endblock title%}
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article List </title>
-</head>
-<body>
-    <div class="container">
-        <h1>Article List</h1>
-        <ul>
-            {% for article in object_list %}
-                <li> <a href="{% url 'blog:article_detail'%}"> {{ article.title }} </a></li>
-            {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
+<h1> Article List </h1>
+    <ul>
+    {% for article in object_list %}
+        <li> <a href="{% url 'blog:article_detail' article.pk %}"> {{ article.title }} </a></li>
+    {% endfor %}
+    </ul>
 {% endblock %}
