--- a/templates/blog/article_list.html
+++ b/templates/blog/article_list.html
@@ -1,11 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %}
-{%endblock title%}
+{% endblock title %}
 {% block content %}
-<h1> Article List </h1>
+    <h1>Article List</h1>
     <ul>
-    {% for article in object_list %}
-        <li> <a href="{% url 'blog:article_detail' article.pk %}"> {{ article.title }} </a></li>
-    {% endfor %}
+        {% for article in object_list %}
+            <li>
+                <a href="{% url 'blog:article_detail' article.pk %}">{{ article.title }}</a>
+            </li>
+        {% endfor %}
     </ul>
-{% endblock %}
+{% endblock content %}
