--- a/templates/merchstore/product_detail.html
+++ b/templates/merchstore/product_detail.html
@@ -8,4 +8,9 @@
     <h1>{{ product.name }} - {{ product.price }}</h1>
     <h2>{{ product.type }}</h2>
     <p>{{ product.description }}</p>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Purchase" {% if request.user.profile == product.owner %} disabled {% endif %}>
+    </form>
 {% endblock content %}
