--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
         {% endblock styles %}
     </head>
     <body>
+        {% if request.user.is_authenticated %}
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
+        {% endif %}
         <div id="content">
             {% block content %}
             {% endblock content %}
