--- a/templates/commissions/commissions_list.html
+++ b/templates/commissions/commissions_list.html
@@ -41,4 +41,6 @@
             <p>Listed by: {{ commission.author }}</p>
         {% endfor %}
     </ul>
+
+    <p>Create Commission</p>
 {% endblock content %}
