created CreateView for commission model

--- a/templates/commissions/commission_detail.html
+++ b/templates/commissions/commission_detail.html
@@ -27,4 +27,6 @@
     {% if request.user.is_authenticated %}
         <p>Apply for job:</p>
     {% endif %}
+
+    <a href = "../list">Back to list view</a>
 {% endblock content %}
