--- a/templates/commissions/commissions_list.html
+++ b/templates/commissions/commissions_list.html
@@ -42,5 +42,5 @@
         {% endfor %}
     </ul>
 
-    <p>Create Commission</p>
+    <a href = "../commissions/add">Create Commission</a>
 {% endblock content %}
