added CreateView and UpdateView for commissions

--- a/templates/commissions/commission_detail.html
+++ b/templates/commissions/commission_detail.html
@@ -31,7 +31,7 @@
     {% endif %}
 
     {% if commission.author.user == user %}
-        <a href = "">Update Commission</a>
+        <a href = "../{{commission.get_pk}}/update">Update Commission</a>
     {% endif%}
     <a href = "../list">Back to list view</a>
 {% endblock content %}
