--- a/templates/commissions/commission_form.html
+++ b/templates/commissions/commission_form.html
@@ -2,9 +2,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% for form in formset %}
+        <form method="post">
+            {% csrf_token %}
+            {{  form.as_p  }}
+            <button type="submit">save</button>
+        </form>
+    {% endfor %}
     <form method="post">
         {% csrf_token %}
-        {{  form  }}
+        {{  form.as_p  }}
+        <p>Author: {{user}} </p>
         <button type="submit">save</button>
-    </form> 
+    </form>
 {% endblock %}
