started work on JobApplication creation

--- a/templates/commissions/commission_detail.html
+++ b/templates/commissions/commission_detail.html
@@ -22,12 +22,12 @@
                 <li>status: {{ job.status }}</li>
                 <li>created on: {{ job.created_on }}</li>
                 <li>last updated: {{ job.updated_on }}</li>
+                <li>primary key: {{ job.get_pk }}</li>
+                {% if request.user.is_authenticated %}
+                    <li><a href ="../{{job.get_pk}}/signup">Apply for job</a></li>
+                {% endif %}
             </ul>
         {% endfor %}
-
-    {% if request.user.is_authenticated %}
-        <p>Apply for job:</p>
-    {% endif %}
 
     {% if commission.author.user == user %}
         <a href = "../{{commission.get_pk}}/update">Update Commission</a>
