--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -6,5 +6,5 @@
     <h1>{{ article.title }}</h1>
     <p>Created On: {{ article.created_on }}</p>
     <p>Updated On: {{ article.updated_on }}</p>
-    <p>{{ article.entry_field|linebreaks }}</p>
+    <p>{{ article.entry|linebreaks }}</p>
 {% endblock content %}
